--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -19,6 +19,9 @@ RUN apk update && apk add python3 python3-dev mariadb-dev build-base && pip3 ins
 COPY ./requirements.txt .
 RUN pip wheel --no-cache-dir --no-deps --wheel-dir /usr/src/app/wheels -r requirements.txt
 
+RUN pip install --upgrade pip setuptools wheel 
+# 오류수정
+
 
 #########
 # FINAL #
