--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 django-filter==23.2
 gunicorn==20.1.0
-mysqlclient==2.1.1
+#mysqlclient==2.1.1
 PyJWT==2.7.0
 pytz==2023.3
 sqlparse==0.4.4
