--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -19,10 +19,6 @@ RUN apk update && apk add python3 python3-dev mariadb-dev build-base && pip3 ins
 COPY ./requirements.txt .
 RUN pip wheel --no-cache-dir --no-deps --wheel-dir /usr/src/app/wheels -r requirements.txt
 
-RUN pip install --upgrade pip setuptools wheel
-RUN pip install -U wheel
-# 오류수정
-
 
 #########
 # FINAL #
@@ -49,7 +45,7 @@ WORKDIR $APP_HOME
 RUN apk update && apk add libpq
 RUN apk update \
     && apk add --virtual build-deps gcc python3-dev musl-dev \
-    && apk add --no-cache mariadb-dev
+    && apk add --no-cache jpeg-dev zlib-dev mariadb-dev
 COPY --from=builder /usr/src/app/wheels /wheels
 COPY --from=builder /usr/src/app/requirements.txt .
 RUN pip install mysqlclient
