--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-environ==0.10.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 gunicorn==20.1.0
+django-filter==23.2
 #mysqlclient==1.4.3
 PyJWT==2.7.0
 pytz==2023.3
