--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 gunicorn==20.1.0
 django-filter==23.2
-#mysqlclient==1.4.3
+mysqlclient==2.2.0
 PyJWT==2.7.0
 pytz==2023.3
 sqlparse==0.4.4
