--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,11 @@
-asgiref==3.6.0
+asgiref==3.7.2
+backports.zoneinfo==0.2.1
 Django==3.0.8
-django-cors-headers==3.11.0
 django-environ==0.10.0
-djangorestframework==3.14.0
-djangorestframework-simplejwt==5.2.2
-gunicorn==20.1.0
 django-filter==23.2
-mysqlclient==2.2.0
-PyJWT==2.7.0
+djangorestframework==3.14.0
+#mysqlclient==2.2.0
 pytz==2023.3
 sqlparse==0.4.4
+typing-extensions==4.7.1
 tzdata==2023.3
