--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.7.2
 #backports.zoneinfo==0.2.1
 Django==4.2.5
+django-cors-headers==4.2.0
 django-environ==0.10.0
 django-filter==23.2
 djangorestframework==3.14.0
